--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<!-- Start Toolbar  -->
 <mat-toolbar color="primary"> <span>{{title}}</span> </mat-toolbar>
+<!--  End Toolbar -->
+
+<!-- Start Menu  -->
+<app-menu></app-menu>
+<!-- End Menu -->
