--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,7 +20,7 @@
             </mat-grid-tile>
         </mat-grid-list>
     </div>
-    <div fxFlex *ngIf="selectedDish">
+    <!-- <div fxFlex *ngIf="selectedDish">
         <mat-card>
             <mat-card-header>
                 <mat-card-title>
@@ -40,5 +40,6 @@
                 <button  mat-button>Share</button>
             </mat-card-actions>
         </mat-card>
-    </div>
+    </div> -->
 </div>
+<app-dish-detail></app-dish-detail>
