update desh detail component

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
     </div>
     <div fxFlex>
         <mat-grid-list fxFlex cols="2" rowHeight="200px">
-            <mat-grid-tile *ngFor="let dish of dishes">
+            <mat-grid-tile *ngFor="let dish of dishes" (click) = "onSelect(dish)"> <!-- event handler -->
                 <img height="200px" src={{dish.image}} alt={{dish.name}}/>
                 <mat-grid-tile-footer>
                     <h1 mat-line>{{dish.name | uppercase}}</h1>
@@ -21,4 +21,6 @@
         </mat-grid-list>
     </div>
 </div>
-<app-dishdetail [dish] = "selectedDish"></app-dishdetail>
+
+<!-- Props -->
+<app-dishdetail [dish] = "selectedDish" *ngIf="selectedDish"></app-dishdetail>
