Header and Footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<!-- Start Toolbar  -->
-<mat-toolbar color="primary"> <span>{{title}}</span> </mat-toolbar>
-<!--  End Toolbar -->
+<!-- Start Header  -->
+<app-header></app-header>
+<!--  End Header -->
 
 <!-- Start Menu  -->
 <app-menu></app-menu>
 <!-- End Menu -->
+
+<!-- Start Footer  -->
+<app-footer></app-footer>
+<!--  End Footer -->
