Angular Router Basics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 <app-header></app-header>
 <!--  End Header -->
 
-<!-- Start Menu  -->
-<app-menu></app-menu>
-<!-- End Menu -->
+<!-- Start Routing Outlet  -->
+<router-outlet></router-outlet>
+<!-- End Routing Outlet -->
 
 <!-- Start Footer  -->
 <app-footer></app-footer>
