--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -12,3 +12,4 @@ $accent-color:         #FFC107;
 $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
+$background-moredark: #4527A0;
