--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,3 +66,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .flex-spacer {
 flex: 1 1 auto;
 }
+
+.active {
+  background: $background-moredark;
+}
