--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -24,6 +24,7 @@
         <mat-card-actions>
             <button  mat-button>Like</button>
             <button  mat-button>Share</button>
+            <button mat-button (click)="goBack()">BACK</button>
         </mat-card-actions>
     </mat-card>
   </div>
