--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
     </div>
     <div fxFlex>
         <mat-grid-list fxFlex cols="2" rowHeight="200px">
-            <mat-grid-tile *ngFor="let dish of dishes" (click) = "onSelect(dish)"> <!-- event handler -->
+            <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]" routerLinkActive="router-link-active" > <!-- event handler ==> (click) = "onSelect(dish)" -->
                 <img height="200px" src={{dish.image}} alt={{dish.name}}/>
                 <mat-grid-tile-footer>
                     <h1 mat-line>{{dish.name | uppercase}}</h1>
@@ -23,4 +23,4 @@
 </div>
 
 <!-- Props -->
-<app-dishdetail [dish] = "selectedDish" *ngIf="selectedDish"></app-dishdetail>
+<!-- <app-dishdetail [dish] = "selectedDish" *ngIf="selectedDish"></app-dishdetail> -->
