--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -25,9 +25,9 @@
         </address>
         <p></p>
         <div>
-          <a mat-raised-button href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
-          <a mat-raised-button><i class="fa fa-skype"></i> Skype</a>
-          <a mat-raised-button href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
+          <a mat-button href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
+          <a mat-button><i class="fa fa-skype"></i> Skype</a>
+          <a mat-button href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
         </div>
         </div>
       <div fxFlex="40">
