--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
         <h4>Links</h4>
         <mat-list>
           <mat-list-item><a routerLink="/home"  mat-button>Home</a></mat-list-item>
-          <mat-list-item><a routerLink="/about"  mat-button>About</a></mat-list-item>
+          <mat-list-item><a routerLink="/aboutus"  mat-button>About</a></mat-list-item>
           <mat-list-item><a routerLink="/menu"  mat-button>Menu</a></mat-list-item>
           <mat-list-item routerLink="/contactus" ><a mat-button>Contact</a></mat-list-item>
         </mat-list>
